reset password implemented

--- a/apps/web/src/styles/fortgetPassword.module.scss
+++ b/apps/web/src/styles/fortgetPassword.module.scss
@@ -1,31 +1,43 @@
-.container{
+.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
-.header{
-height: 30%;
+
+.header {
+    height: 30%;
 }
-.main{
+
+.main {
     height: 50%;
     width: 30%;
 }
-.mainCard{
+
+.mainCard {
     padding: 10px 10px 10px 10px;
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
-.content_card{
+
+.content_card {
     display: flex;
     gap: 5px;
 }
-.content{
+
+.content {
     opacity: .7;
     font-size: small;
 }
-.footer{
+
+.footer {
     height: 20%;
+}
+
+.password_fields {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
