redux login and logout implemented

--- a/apps/web/src/styles/fortgetPassword.module.scss
+++ b/apps/web/src/styles/fortgetPassword.module.scss
@@ -1,43 +1,48 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .header {
-    height: 30%;
+  height: 30%;
 }
 
 .main {
-    height: 50%;
-    width: 30%;
+  height: 50%;
+  width: 30%;
 }
 
 .mainCard {
-    padding: 10px 10px 10px 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  padding: 10px 10px 10px 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .content_card {
-    display: flex;
-    gap: 5px;
+  display: flex;
+  gap: 5px;
 }
 
 .content {
-    opacity: .7;
-    font-size: small;
+  opacity: 0.7;
+  font-size: small;
 }
 
 .footer {
-    height: 20%;
+  height: 20%;
 }
 
 .password_fields {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.message {
+  opacity: 0.7;
+  font-size: small;
+  color: green;
 }
