--- a/apps/web/src/styles.scss
+++ b/apps/web/src/styles.scss
@@ -6,6 +6,6 @@ body,
   height: 100vh;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  // overflow: hidden;
   font-family: 'Arial', sans-serif;
 }
