--- a/apps/web/src/styles/userInfo.module.scss
+++ b/apps/web/src/styles/userInfo.module.scss
@@ -1,5 +1,14 @@
 .title{
-    padding-left: 15px;
+    padding: 15px 15px 0px 15px;
+}
+.mainContainer{
+    width: 100%;
+    height: 90vh;
+    background-color: #F5F5F5;
+}
+.cardContent{
+    width:60%;
+    margin-left: 1%;
 }
 .mainContent{
     display: flex;
@@ -9,24 +18,29 @@
 .leftContent{
     display: 'flex';
     flex-direction: 'column';
-    padding: 30px;
-    width:20%
+    padding: 30px 0px 30px 30px;
+    width:320px;
+    // background-color: aqua;
 }
 .rightContent{
     display: 'flex';
     flex-direction: 'column';
-    padding: 30px;
-    width:20%
+    padding: 30px 30px 30px 0px;
+    width:330px;
+    // background-color: pink;
 }
 .leftData{
     font-weight: bold;
     padding: 3%;
+    // background-color: rgb(205, 109, 50);
+    width: 150px;
 }
 .rightData{
     font-weight: normal;
     padding: 3%;
-    width: 120%;
+    // background-color: yellowgreen;
 }
 .buttonContainer{
     margin-left: 3%;
+    margin-top: 1%;
 }
