Navbar completed  with dropdown ,working on  product page

--- a/apps/web/src/component/products/addProduct.css
+++ b/apps/web/src/component/products/addProduct.css
@@ -49,3 +49,14 @@ button[type='submit'] {
 button[type='submit']:hover {
   background-color: #0069d9;
 }
+.error-container {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.error {
+  color: red;
+  font-size: 14px;
+  margin-top: 5px;
+}
