--- a/apps/web/src/styles/addProduct.module.scss
+++ b/apps/web/src/styles/addProduct.module.scss
@@ -1,53 +1,30 @@
-.form-container {
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+.container{
+  margin: 2%;
+}
+.topContent{
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
-  height: 100vh;
-  font-family: Arial, sans-serif;
+  justify-content: space-between;
 }
 
-h1 {
-  margin-bottom: 1rem;
+.rightContainer{
+display: flex;
 }
 
-.form-group {
-  margin-bottom: 1.5rem;
-  text-align: left;
-  width: 100%;
-  max-width: 400px;
+.leftContainer h1 {
+  font-size: 30px;
 }
-
-label {
-  display: block;
-  margin-bottom: 0.5rem;
-  font-weight: bold;
+.button{
+  padding: 2px 8px;
 }
-
-.form-input {
-  width: 100%;
-  padding: 0.5rem;
-  font-size: 1rem;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-.error {
-  color: red;
-  font-size: 0.875rem;
-  margin-top: 0.25rem;
-}
-
-button[type='submit'] {
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-button[type='submit']:hover {
-  background-color: #0069d9;
+.dropdownButton{
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 24px;
 }
