--- a/apps/web/src/styles/navbar.module.scss
+++ b/apps/web/src/styles/navbar.module.scss
@@ -1,3 +1,4 @@
+
 .navbar {
   display: flex;
   align-items: center;
@@ -8,16 +9,17 @@
 
 .logo {
   font-weight: bold;
-  font-size: 20px;
-  margin-right: 20px;
+  font-size: 12px;
+  // margin-right: 20px;
   padding: 0 24px;
 }
 
 .navLinks {
   display: flex;
-  gap: 20px;
+  gap: 50px;
   list-style: none;
   margin-right: auto;
+  cursor: pointer;
 }
 .navIcon {
   padding: 0 4px;
@@ -34,36 +36,7 @@
   gap: 10px;
   padding: 0 24px;
 }
-.dropdown {
-  position: relative;
-}
 
-.dropdownButton {
-  background: none;
-  border: none;
-  cursor: pointer;
-  font-size: 16px;
-  color: inherit;
-}
-
-.dropdownMenu {
-  position: absolute;
-  top: 190%;
-  left: 0;
-  display: none;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  background-color: #f0f0f0;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.dropdown.open .dropdownMenu {
-  display: flex;
-  z-index: 1;
-  width: 500px;
-  padding: 0.5rem 2rem;
-}
 
 .sequencesRow {
   display: flex;
@@ -164,4 +137,32 @@
   width: 20px;
   height: 20px;
   fill: #333;
+}
+.container{
+  display: flex;
+  gap: 10px;
+  width: max-content;
+}
+.dropDownContainer p{
+  font-size: 14px;
+  color: #7F56D9;
+}
+.dropDwonContent{
+  display: flex;
+  flex-direction: column;
+  max-width: 310px;
+  padding:16px;
+gap: 25px;
+}
+.itemsTitle{
+  display: flex;
+  gap: 10px;
+}
+.dropDownItems p{
+  font-size:12px;
+  color: #475467;
+  padding: 4px 32px;
+}
+.itemsTitle h2{
+font-size: 14px;
 }
