--- a/apps/web/src/styles/addProduct.module.scss
+++ b/apps/web/src/styles/addProduct.module.scss
@@ -1,11 +1,9 @@
-* {
-  margin: 0;
-  padding: 0;
-  border: 0;
-}
 
 .container{
   margin: 2%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 .topContent{
   display: flex;
@@ -21,10 +19,27 @@ display: flex;
   font-size: 30px;
 }
 .button{
-  padding: 2px 8px;
-}
-.dropdownButton{
   display: flex;
-  justify-content: flex-end;
+  padding: 2px;
+  gap: 20px;
+}
+.middleContent{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding-top: 24px;
+
+}
+.middleRightContent{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.resetButton h2{
+  font-size: 14px;
+  font-weight: 'bolder';
+  color: #585454;
+}
+.resetButton{
+  cursor: pointer;
 }
