--- a/apps/web/src/styles/navbar.module.scss
+++ b/apps/web/src/styles/navbar.module.scss
@@ -1,4 +1,8 @@
-
+*{
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
 .navbar {
   display: flex;
   align-items: center;
@@ -9,8 +13,8 @@
 
 .logo {
   font-weight: bold;
-  font-size: 12px;
-  // margin-right: 20px;
+  font-size: 16px;
+  margin-right: 20px;
   padding: 0 24px;
 }
 
@@ -150,18 +154,19 @@
 .dropDwonContent{
   display: flex;
   flex-direction: column;
-  max-width: 310px;
+  max-width: 290px;
   padding:16px;
-gap: 25px;
+gap: 10px;
 }
 .itemsTitle{
   display: flex;
-  gap: 10px;
+  align-items: center;
+gap: 5px;
 }
 .dropDownItems p{
   font-size:12px;
   color: #475467;
-  padding: 4px 32px;
+  padding: 2px 32px;
 }
 .itemsTitle h2{
 font-size: 14px;
