button and select implement

--- a/apps/web/src/styles/user.module.scss
+++ b/apps/web/src/styles/user.module.scss
@@ -13,3 +13,13 @@
   flex-direction: column;
   gap: 5px;
 }
+
+.error{
+  color: red;
+  font-size: 0.75rem;
+  margin-top: 2px;
+}
+
+.statusField{
+  margin-top: 17px;
+}
