--- a/apps/web/src/styles/categoryList.module.scss
+++ b/apps/web/src/styles/categoryList.module.scss
@@ -1,42 +1,51 @@
 .buttonContainer {
-    display: flex;
-    justify-content: flex-end;
-    padding: 5px;
-  }
-  .tableContainer {
-    padding: 10px;
-    height: 100vh;
-  }
-  
-  .container{
-      width: 100%;
-      height: 100vh;
-  }
-  .textContent{
-    padding: 10px;
-  }
-  .content{
-    font-size: 0.70rem;
-  }
+  display: flex;
+  justify-content: flex-end;
+  padding: 5px;
+}
+.tableContainer {
+  padding: 10px;
+  height: 100vh;
+}
 
-  .fields{
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-  .searchField{
-    padding: 10px 10px 0px 10px;
-    display: flex;
-    flex-direction: row;
-    gap:9rem;
-  }
-  .searchButton{
-    display: flex;
-    flex-direction: row;
-    flex-shrink:initial
-  }
-  
-  
+.container {
+  width: 100%;
+  height: 100vh;
+}
+.textContent {
+  padding: 10px;
+}
+.content {
+  font-size: 0.7rem;
+}
+
+.fields {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.searchField {
+  padding: 10px 10px 0px 10px;
+  display: flex;
+  flex-direction: row;
+  gap: 9rem;
+}
+.searchButton {
+  display: flex;
+  flex-direction: row;
+  flex-shrink: initial;
+}
+.error {
+  color: red;
+  font-size: 0.75rem;
+  margin-top: 2px;
+}
+.projectHeading{
+  font-size: 0.8rem;
+}
+.projectField{
+  margin-bottom: 20px;
+}
