--- a/apps/web/src/styles/category.module.scss
+++ b/apps/web/src/styles/category.module.scss
@@ -1,10 +1,12 @@
 .container {
+  height: 100vh;
   display: flex;
-  padding: 10px;
+  padding: 10px 10px 0 10px;
 }
 .sideContainer {
-  width: 35vh;
-  height: 100vh;
+  // width: 35vh;
+  // height: 100vh;
+  // max-height: 50vh;
   background-color: #d9d9d933;
 }
 .options {
@@ -13,4 +15,5 @@
 
 .mainContainer {
   width: 100%;
+  height: 100vh;
 }
