--- a/apps/web/src/styles/categoryList.module.scss
+++ b/apps/web/src/styles/categoryList.module.scss
@@ -5,7 +5,10 @@
 }
 .tableContainer {
   padding: 10px;
-  height: 100vh;
+  // height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .container {
@@ -81,4 +84,36 @@
   border: 1px;
   gap: 8px;
   color: #848289;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  border: 1px solid #ccc;
+}
+
+th {
+  background-color: #f2f2f2;
+  padding: 8px;
+  text-align: left;
+}
+
+tr {
+  border-bottom: 1px solid #ccc;
+}
+
+td {
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+tr:hover {
+  background-color: #e0e0e0;
+}
+.pagination {
+  display: flex;
+  justify-content: end;
 }
