code commited with active

--- a/apps/web/src/styles/categoryList.module.scss
+++ b/apps/web/src/styles/categoryList.module.scss
@@ -34,6 +34,7 @@
   padding: 10px 10px 0px 10px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   gap: 10px;
 }
 .searchButton {
@@ -116,4 +117,9 @@ tr:hover {
 .pagination {
   display: flex;
   justify-content: end;
+}
+
+.inputFilter {
+  display: flex;
+  gap: 10px;
 }
