--- a/apps/web/src/styles/userList.module.scss
+++ b/apps/web/src/styles/userList.module.scss
@@ -1,3 +1,17 @@
+// .buttonContainer {
+//   display: flex;
+//   justify-content: flex-end;
+//   padding: 5px;
+// }
+// .tableContainer {
+//   padding: 10px;
+//   height: 100vh;
+// }
+
+// .container{
+//     width: 100%;
+//     height: 100vh;
+// }
 .buttonContainer {
   display: flex;
   justify-content: flex-end;
@@ -5,10 +19,73 @@
 }
 .tableContainer {
   padding: 10px;
-  height: 100vh;
+  // height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
-
+.fields {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
 .container{
     width: 100%;
     height: 100vh;
+}
+.box {
+  position: relative;
+}
+
+.box::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #ccc;
+  position: absolute;
+  bottom: 20;
+  left: 10;
+}
+
+.box:last-child::after {
+  display: none;
+}
+.textContent {
+  padding: 10px;
+}
+.content {
+  font-size: 0.7rem;
+}
+
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  border: 1px solid #ccc;
+}
+
+th {
+  background-color: #f2f2f2;
+  padding: 8px;
+  text-align: left;
+}
+
+tr {
+  border-bottom: 1px solid #ccc;
+}
+
+td {
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+tr:hover {
+  background-color: #e0e0e0;
 }
