--- a/apps/web/src/styles/gstList.module.scss
+++ b/apps/web/src/styles/gstList.module.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    // overflow: hidden;
   }
   .fields {
     padding: 10px;
@@ -114,4 +115,12 @@
     justify-content: flex-start;
     gap: 1vw;
     padding-left: 10px;
+  }
+
+  .truncatedStyle {
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100px;
   }
