--- a/apps/web/src/styles/gstList.module.scss
+++ b/apps/web/src/styles/gstList.module.scss
@@ -124,3 +124,7 @@
     text-overflow: ellipsis;
     max-width: 100px;
   }
+  .downloadButton {
+    display: flex;
+    align-items: center;
+  }
