--- a/apps/web/src/styles/projectWorkBreakDownForm.module.scss
+++ b/apps/web/src/styles/projectWorkBreakDownForm.module.scss
@@ -1,11 +1,40 @@
 .container {
+  // background-color: gray;
     height: 100vh;
     padding: 10px;
   }
 
   .textContent {
-    padding: 10px;
+    padding: 10px 10px 10px 15px;
   }
   .content {
     font-size: 0.7rem;
+  }
+  .inputFields{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    // justify-content: space-around;
+    justify-content: center;
+    gap: 15%;
+  }
+
+  .inputFieldsArea{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    padding: 0px 0px 0px 29px;
+  }
+
+  .inputFieldMain{
+    padding: 0px 30px 0px 50px;
+    width: 92%;
+    // background-color: lightblue;
+  }
+
+  .submitButton{
+    display: flex;
+    justify-content: flex-end;
+    padding: 0px 25px 0px 0px;
   }
