--- a/apps/web/src/styles/projectWorkBreakDownForm.module.scss
+++ b/apps/web/src/styles/projectWorkBreakDownForm.module.scss
@@ -22,9 +22,12 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
-    padding: 0px 0px 0px 29px;
+    width: 41%;
   }
 
+  .inputTextArea{
+    padding: 0px 0px 0px 30px;
+  }
   .inputFieldMain{
     padding: 0px 30px 0px 50px;
     width: 92%;
@@ -42,3 +45,10 @@
   .inputStyles{
     width: '40%' 
   }
+  .resetButton {
+    color: #848289;
+  }
+.resetButton:hover {
+    background-color: #c4c4c6;
+    color: #ffffff;
+  } 
