--- a/apps/web/src/styles/projectWorkBreakDownList.module.scss
+++ b/apps/web/src/styles/projectWorkBreakDownList.module.scss
@@ -76,3 +76,10 @@
     justify-content: end;
   }
   
+  .tableSpan{
+    display: 'inline-block';
+    white-space: nowrap;
+    overflow: 'hidden';
+    text-overflow: ellipsis;
+    max-width: '100px';
+  }
