--- a/apps/web/src/styles/categoryList.module.scss
+++ b/apps/web/src/styles/categoryList.module.scss
@@ -122,8 +122,8 @@ tr:hover {
 }
 
 .formContainer {
-  width: 300px;
-  padding: 5px 20px 10px 20px;
+  width: 350px;
+  // padding: 5px 20px 10px 20px;
   display: flex;
   flex-direction: column;
 }
@@ -133,6 +133,7 @@ tr:hover {
   flex-direction: row;
   justify-content: flex-end;
   gap: 10px;
+  padding:10px 20px 10px 0px ;
 }
 .searchButton {
   padding: 12px 20px 12px 20px;
@@ -155,4 +156,24 @@ tr:hover {
 .resetButton:hover {
   background-color: #c4c4c6;
   color: #ffffff;
+}
+.cancelButton:hover {
+  background-color: #c4c4c6;
+  color: #070707;
+}
+.titleStyle {
+  padding: 10px 10px 1px 2op;
+}
+.dividerStyle {
+  border-bottom: 1px solid #ccc;
+  padding: 5px 1px 5px 1px;
+}
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 20px 20px 5px 20px;
+}
+.field {
+  padding: 5px 20px 5px 20px;
 }
