--- a/apps/web/src/styles/gstList.module.scss
+++ b/apps/web/src/styles/gstList.module.scss
@@ -94,6 +94,10 @@
     gap: 8px;
     color: #6941c6;
   }
+  .searchButton:hover {
+    background-color: #7f56d9;
+    color: #ffffff;
+  }
   .resetButton {
     padding: 12px 20px 12px 20px;
     border-radius: 8px;
@@ -101,7 +105,10 @@
     gap: 8px;
     color: #848289;
   }
-
+  .resetButton:hover {
+    background-color: #c4c4c6;
+    color: #ffffff;
+  }
   .inputFilter {
     display: flex;
     gap: 10px;
@@ -127,4 +134,36 @@
   .downloadButton {
     display: flex;
     align-items: center;
+  }
+  .formContainer {
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+  }
+  .formButton {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 10px;
+    padding:10px 20px 10px 0px ;
+  }
+  .cancelButton:hover {
+    background-color: #c4c4c6;
+    color: #070707;
+  }
+  .titleStyle {
+    padding: 10px 10px 1px 2op;
+  }
+  .dividerStyle {
+    border-bottom: 1px solid #ccc;
+    padding: 5px 1px 5px 1px;
+  }
+  .header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 20px 20px 5px 20px;
+  }
+  .field {
+    padding: 5px 20px 5px 20px;
   }
