--- a/apps/web/src/styles/navbar.module.scss
+++ b/apps/web/src/styles/navbar.module.scss
@@ -161,7 +161,7 @@ gap: 10px;
 .itemsTitle{
   display: flex;
   align-items: center;
-gap: 5px;
+  gap: 5px;
 }
 .dropDownItems p{
   font-size:12px;
@@ -171,3 +171,34 @@ gap: 5px;
 .itemsTitle h2{
 font-size: 14px;
 }
+.menu {
+  list-style: none;
+  // width: 73px;
+  // padding-top: 5px;
+  margin-top: 15px;
+  // padding-left: 10px;
+  // padding-right: 18px;
+  // padding-bottom: 10px;
+  position:absolute;
+  gap: 10px;
+  top: 45px;
+  left: 92%;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  font-weight:normal;
+  border-radius: 0px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0.1, 0.1);
+}
+.menuItem:hover {
+  background-color: #ddd;
+}
+.menuItem{
+  // background-color: #333;
+  display: flex;
+  flex-direction: row;
+  padding: 5px;
+  gap: 10px;
+} 
+
