--- a/apps/web/src/styles/subCategoryList.module.scss
+++ b/apps/web/src/styles/subCategoryList.module.scss
@@ -50,12 +50,24 @@
   gap: 8px;
   color: #6941c6;
 }
+.searchButton:hover {
+  background-color: #7f56d9;
+  color: #ffffff;
+}
 .resetButton {
   padding: 12px 20px 12px 20px;
   border-radius: 8px;
   border: 1px;
   gap: 8px;
   color: #848289;
+}
+.resetButton:hover {
+  background-color: #c4c4c6;
+  color: #ffffff;
+}
+.cancelButton:hover {
+  background-color: #c4c4c6;
+  color: #070707;
 }
 .searchContainer {
   padding: 0px 10px 0px 10px;
@@ -103,8 +115,8 @@ tr:hover {
 }
 
 .formContainer {
-  width: 300px;
-  padding: 1px 20px 10px 20px;
+  width: 350px;
+  // padding: 1px 20px 10px 20px;
   display: flex;
   flex-direction: column;
 }
@@ -114,10 +126,27 @@ tr:hover {
   flex-direction: row;
   justify-content: flex-end;
   gap: 10px;
+  padding:10px 20px 10px 0px ;
 }
 
 .tableIcon {
   display: flex;
   gap: 10px;
   align-items: center;
+}
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 20px 20px 5px 20px;
+}
+.field {
+  padding: 5px 20px 5px 20px;
+}
+.dividerStyle {
+  border-bottom: 1px solid #ccc;
+  padding: 5px 1px 5px 1px;
+}
+.titleStyle {
+  padding: 10px 10px 1px 2op;
 }
