--- a/apps/web/src/styles/subSubCategoryList.module.scss
+++ b/apps/web/src/styles/subSubCategoryList.module.scss
@@ -43,6 +43,10 @@
   flex-direction: row;
   flex-shrink: initial;
 }
+.searchButton:hover {
+  background-color: #7f56d9;
+  color: #ffffff;
+}
 .error {
   color: red;
   font-size: 0.75rem;
@@ -88,7 +92,14 @@
   gap: 8px;
   color: #848289;
 }
-
+.resetButton:hover {
+  background-color: #c4c4c6;
+  color: #ffffff;
+}
+.cancelButton:hover {
+  background-color: #c4c4c6;
+  color: #070707;
+}
 table {
   border-collapse: collapse;
   width: 100%;
@@ -127,8 +138,8 @@ tr:hover {
 }
 
 .formContainer {
-  width: 300px;
-  padding: 1px 20px 10px 20px;
+  width: 350px;
+  // padding: 1px 20px 10px 20px;
   display: flex;
   flex-direction: column;
 }
@@ -138,10 +149,27 @@ tr:hover {
   flex-direction: row;
   justify-content: flex-end;
   gap: 10px;
+  padding:10px 20px 10px 0px ;
 }
 
 .tableIcon {
   display: flex;
   gap: 10px;
   align-items: center;
+}
+.titleStyle {
+  padding: 10px 10px 1px 2op;
+}
+.dividerStyle {
+  border-bottom: 1px solid #ccc;
+  padding: 5px 1px 5px 1px;
+}
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 20px 20px 5px 20px;
+}
+.field {
+  padding: 5px 20px 5px 20px;
 }
