--- a/apps/web/src/styles/projectWorkBreakDownList.module.scss
+++ b/apps/web/src/styles/projectWorkBreakDownList.module.scss
@@ -83,3 +83,9 @@
     text-overflow: ellipsis;
     max-width: '100px';
   }
+
+  .tableIcon {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
