--- a/apps/web/src/styles/fortgetPassword.module.scss
+++ b/apps/web/src/styles/fortgetPassword.module.scss
@@ -30,6 +30,7 @@
 .content {
   opacity: 0.7;
   font-size: small;
+  padding-bottom: 10px;
 }
 
 .footer {
@@ -45,4 +46,16 @@
   opacity: 0.7;
   font-size: small;
   color: green;
+}
+
+.searchButton {
+  padding: 12px 20px 12px 20px;
+  border-radius: 8px;
+  border: 1px;
+  gap: 8px;
+  color: #6941c6;
+}
+.searchButton:hover {
+  background-color: #7f56d9;
+  color: #ffffff;
 }
