--- a/apps/web/src/styles/projectForm.module.scss
+++ b/apps/web/src/styles/projectForm.module.scss
@@ -52,10 +52,21 @@
     flex-direction: column;
     gap: 5px;
     text-align: center;
-    // background-color: #c4c4c6;
+  }
+ 
+  th {
+    background-color: #f2f2f2;
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: center;
   }
 
-  td {
-    // background-color: aqua;
+  th.heading-column {
+    border-right: none;
   }
+
+  th:not(.heading-column) {
+    border-left: none;
+  }
+
   
