--- a/apps/web/src/styles/projectlist.module.scss
+++ b/apps/web/src/styles/projectlist.module.scss
@@ -53,3 +53,46 @@
     display: flex;
     gap: 10px;
   }
+  .button {
+    display: flex;
+    gap: 20px;
+  }
+  .pagination {
+    padding-top: 10px;
+    display: flex;
+    justify-content: end;
+  }
+  table {
+    border-collapse: collapse;
+    width: 100%;
+    border: 1px solid #ccc;
+  }
+  th {
+    background-color: #f2f2f2;
+    padding: 8px;
+    text-align: left;
+  } 
+  tr {
+    border-bottom: 1px solid #ccc;
+  }
+  td {
+    padding: 8px;
+  }
+  .tablerow {
+    display: flex;
+    flex-direction: row;
+    column-gap: 15px;
+  }
+  tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+  tr:hover {
+    background-color: #e0e0e0;
+  }
+  .tableContainer {
+    padding: 10px 10px 0px 30px;
+    // height: 100vh;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
