--- a/apps/web/src/styles/projectForm.module.scss
+++ b/apps/web/src/styles/projectForm.module.scss
@@ -55,10 +55,10 @@
   }
  
   th {
-    background-color: #f2f2f2;
+  //   background-color: #f2f2f2;
     border: 1px solid #ddd;
-    padding: 8px;
-    text-align: center;
+  //   padding: 8px;
+  //   text-align: center;
   }
 
   th.heading-column {
@@ -74,3 +74,6 @@
     // background-color: red;
   }
   
+  .tableHeading{
+    text-align: center;
+  }
