--- a/apps/web/src/styles/projectlist.module.scss
+++ b/apps/web/src/styles/projectlist.module.scss
@@ -58,7 +58,7 @@
     gap: 20px;
   }
   .pagination {
-    padding-top: 10px;
+    padding: 10px 10px 10px 0px;
     display: flex;
     justify-content: end;
   }
@@ -70,7 +70,7 @@
   th {
     background-color: #f2f2f2;
     padding: 8px;
-    text-align: left;
+    text-align: center;
   } 
   tr {
     border-bottom: 1px solid #ccc;
