--- a/apps/web/src/styles/projectForm.module.scss
+++ b/apps/web/src/styles/projectForm.module.scss
@@ -55,10 +55,7 @@
   }
  
   th {
-  //   background-color: #f2f2f2;
     border: 1px solid #ddd;
-  //   padding: 8px;
-  //   text-align: center;
   }
 
   th.heading-column {
@@ -71,7 +68,10 @@
 
   td{
     min-height:5px;
-    // background-color: red;
+  }
+
+  td {
+    vertical-align: middle;
   }
   
   .tableHeading{
@@ -87,3 +87,28 @@
     // justify-content: center;
     // gap: 15%;
   }
+
+
+  .menu {
+    list-style: none;
+    position:absolute;
+    // gap: 10px;
+    // top: 0;
+    // left: 75%;
+    background-color: #f2f2f2;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    font-weight:normal;
+    border-radius: 0px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0.1, 0.1);
+  }
+  .menuItem:hover {
+    background-color: #ddd;
+  }
+  .menuItem{
+    display: flex;
+    flex-direction: row;
+    padding: 5px;
+    gap: 10px;
+  } 
