--- a/apps/web/src/styles/navbar.module.scss
+++ b/apps/web/src/styles/navbar.module.scss
@@ -180,6 +180,7 @@ font-size: 14px;
   // padding-right: 18px;
   // padding-bottom: 10px;
   position:absolute;
+  z-index: 1500;
   gap: 10px;
   top: 45px;
   left: 92%;
