--- a/apps/web/src/styles/projectWorkBreakDownList.module.scss
+++ b/apps/web/src/styles/projectWorkBreakDownList.module.scss
@@ -13,19 +13,18 @@
     position: relative;
   }
 .searchField {
-    padding: 10px 10px 0px 10px;
+    padding: 20px 10px 0px 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    // gap: 10px;
   }
 .inputFilter {
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    gap: 10px; 
   }
 .searchButton {
-    padding: 12px 20px 12px 20px;
+    padding: 12px 20px 0px 20px;
     border-radius: 8px;
     border: 1px;
     gap: 8px;
@@ -35,18 +34,18 @@
     background-color: #7f56d9;
     color: #ffffff;
   }
-.resetButton {
+  .resetButton [disabled]{
     padding: 12px 20px 12px 20px;
     border-radius: 8px;
     border: 1px;
     gap: 8px;
     color: #848289;
-    // background-color: #e0e0e0;
+    background-color: #ccc;
   }
-.resetButton:hover {
+  .resetButton:not([disabled]):hover {
     background-color: #c4c4c6;
     color: #ffffff;
-  }  
+  } 
 .box::after {
     content: '';
     display: block;
@@ -64,10 +63,9 @@
   
 .tableContainer {
     padding: 10px;
-    // height: 100vh;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 5px;  
   }
 
 
@@ -88,4 +86,9 @@
     display: flex;
     gap: 10px;
     align-items: center;
+  }
+
+  .dividerStyle {
+    border-bottom: 1px solid #ccc;
+    padding: 0px 1px 5px 1px;
   }
