--- a/apps/web/src/styles/subCategoryList.module.scss
+++ b/apps/web/src/styles/subCategoryList.module.scss
@@ -4,14 +4,16 @@
   padding: 5px;
 }
 .tableContainer {
-  padding: 10px;
-  // height: 100vh;
+  padding: 10px 5px 10px 5px;
   display: flex;
   flex-direction: column;
   gap: 5px;
 }
 .textContent {
-  padding: 1px;
+  padding: 10px 0px 1px 10px;
+}
+.textContent1 {
+  padding: 10px 0px 1px 5px;
 }
 .content {
   font-size: 0.7rem;
@@ -54,14 +56,15 @@
   background-color: #7f56d9;
   color: #ffffff;
 }
-.resetButton {
+.resetButton [disabled]{
   padding: 12px 20px 12px 20px;
   border-radius: 8px;
   border: 1px;
   gap: 8px;
   color: #848289;
+  background-color: #ccc;
 }
-.resetButton:hover {
+.resetButton:not([disabled]):hover {
   background-color: #c4c4c6;
   color: #ffffff;
 }
@@ -70,7 +73,7 @@
   color: #070707;
 }
 .searchContainer {
-  padding: 0px 10px 0px 10px;
+  padding: 0px 5px 0px 5px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
