--- a/apps/web/src/styles/subSubCategoryList.module.scss
+++ b/apps/web/src/styles/subSubCategoryList.module.scss
@@ -4,8 +4,7 @@
   padding: 5px;
 }
 .tableContainer {
-  padding: 10px;
-  // height: 100vh;
+  padding: 10px 5px 10px 5px;
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -17,7 +16,10 @@
 }
 
 .textContent {
-  padding: 1px;
+  padding: 10px 0px 1px 10px;
+}
+.textContent1 {
+  padding: 10px 0px 1px 5px;
 }
 .content {
   font-size: 0.7rem;
@@ -32,7 +34,7 @@
   flex-wrap: wrap;
 }
 .searchField {
-  padding: 0px 10px 0px 10px;
+  padding: 0px 5px 0px 5px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -172,4 +174,7 @@ tr:hover {
 }
 .field {
   padding: 5px 20px 5px 20px;
+}
+.selectTab {
+  width: 20%;
 }
