--- a/apps/web/src/styles/expanses.module.scss
+++ b/apps/web/src/styles/expanses.module.scss
@@ -49,6 +49,10 @@
   overflow-x: auto;
   max-width: 1200px; /* Adjust the maximum width as needed */
   margin: 0 auto;
+  &::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+  }
 }
 
 .scrollable_table {
@@ -58,19 +62,23 @@
   th,
   td {
     border: 1px solid #000000;
-    padding: 12px, 0px, 12px, 0px;
     text-align: left;
-    text-transform: uppercase;
     font-weight: 600;
     font-size: 11px;
   }
-
-  th {
-    background-color: #f2f2f2;
+  thead {
+    background-color: aqua;
+    tr {
+      background-color: beige;
+      th {
+        background-color: #f2f2f2;
+        text-transform: uppercase;
+        margin-top: 10px;
+      }
+    }
   }
+
   td {
-    padding: 12px, 0px, 12px, 0px;
-    height: 50px;
     align-items: center;
     text-align: center;
   }
@@ -90,4 +98,14 @@
   padding-right: 25px;
   display: flex;
   justify-content: flex-end;
+}
+
+.bulkComponent {
+  padding-right: 25px;
+}
+
+.totalExpense {
+  // font-weight: 600;
+  // font-size: 15px;
+  padding-bottom: '20px';
 }
