--- a/apps/web/src/styles/popupexpanses.module.scss
+++ b/apps/web/src/styles/popupexpanses.module.scss
@@ -127,28 +127,37 @@
   }
 }
 
-.table{
+.scrollableTable {
   width: 100%;
   border-collapse: collapse;
-}
 
-.tableHeading {
-  width: 100%;
-}
+  th,
+  td {
+    border: 1px solid #000000;
+    text-align: left;
+    font-weight: 600;
+    font-size: 11px;
+  }
+  thead {
+    background-color: aqua;
+    tr {
+      background-color: beige;
+      th {
+        background-color: #f2f2f2;
+        text-transform: uppercase;
+        margin-top: 10px;
+      }
+    }
+  }
 
-.tableRow{
-  border: 1px solid black;
-  background-color: transparent !important;
-}
-
-.tableHead {
-  padding: 10px;
-  text-transform: uppercase;
-  background-color: transparent !important;
-}
-
-.tableData {
-  padding: 10px;
+  td {
+    align-items: center;
+    text-align: center;
+  }
+  tr,
+  td:hover {
+    background-color: white;
+  }
 }
 
 .buttonContainer {
